--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -191,7 +191,7 @@
 .blogSection {
   width: 95%;
   margin: 2rem 0;
-  background: #f88e0352;
+  background: #fdfdfd;
   backdrop-filter: blur(4px);
   border-radius: 12px;
   text-align: center;
