--- a/src/app/components/BlogPreview.module.css
+++ b/src/app/components/BlogPreview.module.css
@@ -2,7 +2,7 @@
     background-size: cover;
     background-position: center;
     padding: 80px 40px;
-    color: white;
+    color: rgb(12, 12, 12);
     font-family: 'Segoe UI', sans-serif;
   }
   
@@ -19,7 +19,7 @@
   }
   
   .previewHeader p {
-    color: #cccccc;
+    color: #1a1919;
     font-size: 1rem;
   }
   
@@ -43,7 +43,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    color: white;
+    color: rgb(24, 23, 23);
   }
   
   .blogCard:hover {
@@ -76,7 +76,7 @@
   }
   
   .excerpt {
-    color: #ddd;
+    color: #0e0d0d;
     font-size: 0.95rem;
     line-height: 1.4;
     flex-grow: 1;
@@ -91,7 +91,7 @@
     background-color: rgba(255, 255, 255, 0.15);
     padding: 12px 24px;
     border-radius: 10px;
-    color: white;
+    color: rgb(20, 20, 20);
     text-decoration: none;
     font-weight: 500;
     transition: background 0.3s ease;
